--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ##########################################
-# PixSync Environment Configuration
+# PicSync Environment Configuration
 # ---------------------------------------
 # Copy this file to `.env` and adjust values as needed.
 # Default values are ready for local Docker setup.
@@ -12,9 +12,9 @@ APP_HOST=0.0.0.0
 # === Database ===
 DB_HOST=postgres
 DB_PORT=5432
-DB_USER=pixsync
-DB_PASSWORD=pixsync
-DB_NAME=pixsync
+DB_USER=picsync
+DB_PASSWORD=picsync
+DB_NAME=picsync
 DB_SSLMODE=disable
 
 # === Storage ===
@@ -22,17 +22,17 @@ DB_SSLMODE=disable
 STORAGE_DRIVER=local
 
 # Local storage path (absolute path on the host machine)
-# Example: /mnt/raid/pixsync_data
-LOCAL_STORAGE_PATH=/data/pixsync
+# Example: /mnt/raid/picsync_data
+LOCAL_STORAGE_PATH=/data/picsync
 
 # MinIO configuration (used only if STORAGE_DRIVER=minio)
 MINIO_ENDPOINT=minio:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
-MINIO_BUCKET=pixsync
+MINIO_BUCKET=picsync
 
 # === Security ===
-JWT_SECRET=ff16f59833c54b51b2c6429e52690349 #changeme
+JWT_SECRET=#changeme
 
 # === Timezone ===
 TZ=Europe/Berlin
